--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=auth
 # ======================
 # DATABASE CONFIG
 # ======================
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/employee}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -20,26 +20,26 @@ spring.h2.console.enabled=true
 # ======================
 # JWT CONFIG
 # ======================
-jwt.secret=VGhpcy1pczMyLWJ5dGUtcmFuZG9tLXNlY3JldC0xMjM0IQ==
-jwt.access.expiration=900000     
-# 15 min
-jwt.refresh.expiration=604800000      
-# 7 days
+jwt.secret=${JWT_SECRET:VGhpcy1pczMyLWJ5dGUtcmFuZG9tLXNlY3JldC0xMjM0IQ==}
+jwt.access.expiration=900000
+jwt.refresh.expiration=604800000
 
 # ======================
 # LOGGING CONFIG
 # ======================
 
-# LOG LEVELS
+# log directory for ubuntu + docker
+logging.file.path=${LOG_PATH:/app/logs}
+
+# log file name (auto inside logging.file.path)
+logging.file.name=${LOG_PATH:/app/logs}/app.log
+
 logging.level.root=INFO
 logging.level.com.prabhakar.auth=DEBUG
 logging.level.com.prabhakar.auth.security=INFO
 logging.level.org.springframework.security=INFO
 
-# LOG FILE LOCATION
-logging.file.name=D:/serviceslog/auth/app.log
-
-# CONSOLE LOG PATTERN (COLORED)
+# CONSOLE LOG PATTERN
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){faint} %clr(%-5level) %clr([%thread]){magenta} %clr(%logger{36}){cyan} - %clr(%msg%n){green}
 
 # FILE LOG PATTERN
