--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,35 +1,18 @@
 spring.application.name=auth
 
-# ======================
-# DATABASE CONFIG
-# ======================
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/employee}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=emprecord
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# ======================
-# H2 (optional)
-# ======================
-spring.h2.console.enabled=true
-
-# ======================
-# JWT CONFIG
-# ======================
-jwt.secret=${JWT_SECRET:VGhpcy1pczMyLWJ5dGUtcmFuZG9tLXNlY3JldC0xMjM0IQ==}
+# JWT
+jwt.secret=${JWT_SECRET}
 jwt.access.expiration=900000
 jwt.refresh.expiration=604800000
 
-# ======================
-# LOGGING CONFIG
-# ======================
-logging.level.root=INFO
-logging.level.com.prabhakar.auth=DEBUG
-logging.level.com.prabhakar.auth.security=INFO
-logging.level.org.springframework.security=INFO
-
-logging.file.name=${LOG_PATH:/app/logs}/app.log
+# LOGGING
+logging.file.name=${LOG_PATH}/app.log
