role update api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,46 @@
 spring.application.name=auth
 
-# Database
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# ======================
+# DATABASE CONFIG
+# ======================
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=emprecord
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=emprecord
 
-# JWT
-jwt.secret=${JWT_SECRET}
-jwt.access.expiration=900000
-jwt.refresh.expiration=604800000
+# ======================
+# H2 (optional)
+# ======================
+spring.h2.console.enabled=true
 
-# LOGGING
-logging.file.name=${LOG_PATH}/app.log
+# ======================
+# JWT CONFIG
+# ======================
+jwt.secret=VGhpcy1pczMyLWJ5dGUtcmFuZG9tLXNlY3JldC0xMjM0IQ==
+jwt.access.expiration=900000     
+# 15 min
+jwt.refresh.expiration=604800000      
+# 7 days
+
+# ======================
+# LOGGING CONFIG
+# ======================
+
+# LOG LEVELS
+logging.level.root=INFO
+logging.level.com.prabhakar.auth=DEBUG
+logging.level.com.prabhakar.auth.security=INFO
+logging.level.org.springframework.security=INFO
+
+# LOG FILE LOCATION
+logging.file.name=D:/serviceslog/auth/app.log
+
+# CONSOLE LOG PATTERN (COLORED)
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){faint} %clr(%-5level) %clr([%thread]){magenta} %clr(%logger{36}){cyan} - %clr(%msg%n){green}
+
+# FILE LOG PATTERN
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %logger{36} - %msg%n
