--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,40 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=emprecord
 
+
+#=================
+#Raddis mapping to wsl
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=6000
+spring.cache.type=redis
+spring.data.redis.database=0
+spring.devtools.restart.enabled=false
+
+
+#========================
+#mail settingsspring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=prabhakarkumarekc477@gmail.com
+spring.mail.password=vpwxtqykeyyjxtzt
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+#=======================
+#cloudniray
+cloudinary.cloud_name=prabhakar2023
+cloudinary.api_key=439627562944491
+cloudinary.api_secret=sGoRrd9FZ69Lnmzcgo_bOG0X21w
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
+
 # ======================
 # H2 (optional)
 # ======================
