--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=auth
 # ======================
 # DATABASE CONFIG
 # ======================
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee
+#spring.datasource.url=jdbc:postgresql://localhost:5432/employee
+spring.datasource.url=jdbc:postgresql://postgres:5432/employee
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
